--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "1722qunar",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "wwj <1320073909@qq.com>",
