--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "fastclick": "^1.0.6",
+    "loader": "^2.1.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "2.6.7",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
